--- a/src/index.html
+++ b/src/index.html
@@ -220,12 +220,10 @@
         <section class="cover">
             <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">
                 <h2 class="cover__title"></h2>
-                <h3 class="cover__subtitle">По мотивам учебной темы о&nbsp;Транссибе и iframes — путешествие
-                    от&nbsp;столицы&nbsp;до
-                    Байкала на
-                    электричках.</h3>
+                <h3 class="cover__subtitle"></h3>
             </a>
         </section>
+        <span class="scrolling"></span>
     </main>
 
     <!-- FOOTER -->
